2007-3-1 Patrick Galbraith <patg@grazr.com> Jim Winstead <jimw@mysql.com> (4.002)
* Fix re-exec of Makefile.PL when forcing $ENV{LANG} to 'C'. (RT #25233,
  reported by Slaven Rezic)
* Rewrote table_info method to support all arguments (previously it would
  only ever return all of the tables in the current database, no matter what
  was specified)
* Fixed $DBD::mysql::VERSION to be a string instead of a float, which caused
  problems for certain locales
* Fixed bug #23974. $dbh->column_info now returns empty arrayref upon table not
  existing.  Much thanks to Tim Bunce for help fixing the problem in mysql.pm
  vs. dbdimp.c
* Removed #ifdefs for do error (sqlstate being passed as last arg depending on
  version)
* Fixed insertid test to work with auto_increment_increment replication setup.
* Patch from Tim Bunce fixing do() not set $dbh->{Statement} attribute,
  which prevented DBD::Profile from giving correct results for calls to do()
  and causing ShowErrorStatement to possibly report the wrong statement in the
  error message 
* Patch from Tim Bunce clearing out the sth attribute cache when switching
  between result, sets which prevented the adjustedment of NUM_OF_FIELDS
* Cleanup of several unused variables
* Added support for wildcards in last argument of column_info().
* Add mysql_is_auto_increment to results of column_info(). (Bug #26603,
  original patch from Dave Rolsky)
* Return the correct table type for both tables and views from the table_info()
  method. (Bug #26603, original patch from Dave Rolsky)
* Add implementation of foreign_key_info() (Bug #26604, original patch from
  Dave Rolsky, and final implementation based on Connector/J code)


2007-1-8 Jim Winstead <jimw@mysql.com> Patrick Galbraith <patg@grazr.com> (4.001)
* Fix handling of unsigned integer values in result sets when using
  server-side prepared statements (they were not retrieved at all).
* Fix handling of signed integer values when using server-side prepared